src/test/ui/generator/yield-while-local-borrowed.stderr
error[E0626]: borrow may still be in use when generator yields (Ast)
  --> $DIR/yield-while-local-borrowed.rs:24:22
   |
24 |         let a = &mut 3;
   |                      ^
...
27 |         yield();
   |         ------- possible yield occurs here

error[E0626]: borrow may still be in use when generator yields (Ast)
  --> $DIR/yield-while-local-borrowed.rs:52:22
   |
52 |             let b = &a;
   |                      ^
...
55 |             yield();
   |             ------- possible yield occurs here

error[E0626]: borrow may still be in use when generator yields (Mir)
  --> $DIR/yield-while-local-borrowed.rs:24:17
   |
24 |         let a = &mut 3;
   |                 ^^^^^^
...
27 |         yield();
   |         ------- possible yield occurs here

error[E0626]: borrow may still be in use when generator yields (Mir)
  --> $DIR/yield-while-local-borrowed.rs:52:21
   |
52 |             let b = &a;
   |                     ^^
...
55 |             yield();
   |             ------- possible yield occurs here

error: aborting due to 4 previous errors

If you want more information on this error, try using "rustc --explain E0626"
